--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gm-ds/tokens",
+  "name": "@gm-ds/react",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@gm-ds/tokens": "*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
