--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,17 +6,20 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch --external react",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@gm-ds/ts-config": "*",
-    "@gm-ds/tokens": "*",
     "@gm-ds/eslint-config": "*",
+    "@gm-ds/tokens": "*",
+    "@gm-ds/ts-config": "*",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "react": "^18.2.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
