--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -27,6 +27,9 @@
     "vite": "^3.2.4"
   },
   "dependencies": {
+    "@gm-ds/react": "*",
+    "@gm-ds/eslint-config": "*",
+    "@gm-ds/tokens": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
